--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#navbar {
+  display :flex;
+  justify-content: flex-end;
+}
+
+.login-form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+
+  .login-section {
+
+  }
+
+  .form-button {
+    display: flex;
+    flex-direction: row;
+    * {
+      font-size: 14px;
+      width: 100px;
+      height: 30px;
+      padding: 10px;
+      margin: 10px;
+      background-color: deepskyblue;
+      border: 0px;
+      &:hover {
+        background-color: cornflowerblue;
+      }
+    }
+  }
+}
