--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the API::workouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table {
+  border-collapse: collapse;
+}
+
+table {
+  border: 1px solid black;
+}
+
+tr {
+  background-color: white;
+  border: 1px solid gray;
+  text-align: left;
+  &:nth-child(even) {
+    background-color: lightgray;
+  }
+}
+
+thead tr {
+  background-color: lightgray;
+}
+
+
+
+.workout-title {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+}
+
+table.workouts {
+  width: 80%;
+  margin: 0 auto;
+  border-spacing: 0 6px;
+}
+
+table.workouts th, table.workouts td {
+  padding: 12px;
+  vertical-align: center;
+  color: rgb(68,68,68);
+}
+table.workouts caption {
+  background-color: rgb(90,85,90);
+  font-weight: bold;
+  color: rgb(255,255,255);
+  padding-top: .7em;
+  padding-bottom: .7em;
+  letter-spacing: .085em;
+}
+table.workouts th {
+  text-align: left;
+}
+table.workouts td {
+  background-color: rgb(170,200,209);
+}
+.date {
+  display: inline-block;
+  background-color: rgb(68,68,68);
+  color: #fff;
+  padding: 10px;
+  border-radius: 50%;
+}
