added pictures to home cities

--- a/app/assets/stylesheets/api/home_cities.scss
+++ b/app/assets/stylesheets/api/home_cities.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the API::home_cities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.home-city-index {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+
+  li {
+    min-width: 300px;
+    max-width: 45%;
+    width: auto;
+    height: auto;
+    border: 1px solid black;
+    position: relative;
+
+    img {
+      width: 100%;
+      height: auto;
+      opacity: 0.8;
+
+    }
+    p {
+      position: absolute;
+      left: 0;
+      top: 40%;
+      width: 100%;
+      text-align: center;
+      font-size: 36px;
+      color: white;
+      text-shadow: 2px 2px darkgray;
+    }
+  }
+
+}
