--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -23,8 +23,6 @@ thead tr {
   background-color: lightgray;
 }
 
-
-
 .workout-title {
   display: block;
   text-align: center;
@@ -53,9 +51,17 @@ table.workouts caption {
 table.workouts th {
   text-align: left;
 }
-table.workouts td {
-  background-color: rgb(170,200,209);
+table.workouts {
+  tr {
+    background-color: rgb(170,200,209);
+    cursor: pointer;
+    &:hover {
+      background-color: rgb(0,200,209);
+    }
+  }
 }
+
+
 .date {
   display: inline-block;
   background-color: rgb(68,68,68);
