shows create workout only when logged in

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -1,7 +1,7 @@
 #navbar {
   display :flex;
   justify-content: space-between;
-  background-color: lightgray;
+  background-color: rgba(221, 221, 221, 1);
   height: 50px;
   #logo {
     height: 50px;
