--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -42,6 +42,7 @@ table.workouts th, table.workouts td {
 }
 table.workouts caption {
   background-color: rgb(90,85,90);
+  text-align: center;
   font-weight: bold;
   color: rgb(255,255,255);
   padding-top: .7em;
