--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -1,34 +1,67 @@
-// #navbar {
-//   display :flex;
-//   justify-content: space-between;
-//   background-color: rgba(221, 221, 221, 1);
-//   height: 50px;
-//   #logo {
-//     height: 50px;
-//     width: 150px;
-//     &:hover {
-//       cursor: pointer;
-//     }
-//
-//   }
-// }
-//
-//
-// #login-info {
-//   display: flex;
-//   justify-content: flex-start;
-// }
-#logo {
+$center-padding: 13px;
+
+.navbar {
+  display :block;
+  background-color: rgba(221, 221, 221, 1);
   height: 50px;
-  width: 150px;
-  display: inline-block;
-  &:hover {
-    cursor: pointer;
+
+  #logo {
+    float: left;
+    height: 49px;
+    width: 150px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .login-info {
+    display: flex;
+    justify-content: flex-end;
+
+    li {
+      height: 50px;
+      padding: $center-padding;
+
+      &:hover {
+        background-color: darkgray;
+        cursor: pointer;
+      }
+    }
   }
 }
 
-.profile-picture {
-  height: 50px;
-  width: auto;
-  padding: 0;
+.drop-button {
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  background-color: #f9f9f9;
+  top: 48px;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  left:auto;
+  right:0;
+  margin-right:-10px;
+
+}
+
+.dropdown-content li:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+}
+
+.dropdown:hover .drop-button {
+    background-color: #3e8e41;
 }
