--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -1,10 +1,13 @@
 $center-padding: 13px;
 
+#root > div > nav {
+  margin-bottom: 0;
+}
+
 .navbar {
   display :block;
   background-color: rgba(221, 221, 221, 1);
   height: 50px;
-
   #logo {
     float: left;
     height: 49px;
@@ -24,7 +27,7 @@ $center-padding: 13px;
       padding: $center-padding;
 
       &:hover {
-        background-color: darkgray;
+        background-color: #f1f1f1;
         cursor: pointer;
       }
     }
