frontpage basic functionality working

--- a/app/assets/stylesheets/api/login_form.scss
+++ b/app/assets/stylesheets/api/login_form.scss
@@ -22,3 +22,56 @@ h2 {
     }
   }
 }
+
+.auth-toggle {
+  display: flex;
+  border-radius: 2px;
+  transition: all 0.2s ;
+
+  &:hover {
+    cursor: pointer
+  }
+
+  li {
+    padding: 10px;
+    width: 50%;
+    text-align: center;
+    background: gray;
+  }
+
+  .selected {
+    background: white;
+  }
+}
+
+.ReactModalPortal div div {
+  padding: 0 !important;
+}
+
+.credentials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .auth-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    .auth-btn {
+      width: 50%;
+      height: 40px;
+      text-align: center;
+      border: 0;
+      background: limegreen;
+      border-radius: 5px;
+      transition: all 0.2s ;
+      &:hover {
+        background: green;
+      }
+    }
+  }
+}
+
+.glyphicons {
+}
