--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -6,7 +6,7 @@ $center-padding: 13px;
 
 .navbar {
   display :block;
-  background-color: rgba(221, 221, 221, 1);
+  background-color: #f4f4f4;
   height: 50px;
   #logo {
     float: left;
