--- a/app/assets/stylesheets/api/home_page.scss
+++ b/app/assets/stylesheets/api/home_page.scss
@@ -1,6 +1,90 @@
 .splash {
   margin: 0 !important;
   display:block;
-  background-color: gray;
+  height: 300px;
+  font-family: 'Oxygen', sans-serif;
+  background: red; ///for debugging
 
+  .workout-splash {
+    opacity: 1; //can be removed with ^^ red
+    height: 100%;
+    background-image: url("/assets/workoutsplash.jpg");
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+}
+
+
+.gray-overlay {
+  background: rgba(133,133,133, 0.6);
+  height: 100%;
+  text-align: center;
+  color: white;
+
+  h1 {
+    padding-top: 100px;
+    font-size: 48px;
+    font-weight: 700;
+
+  }
+
+  p {
+    font-size: 24px;
+  }
+
+  .button-cover {
+    border: 0;
+    background: none;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    button {
+      border: 0;
+      background: #C0B283;
+      padding: 10px;
+      display: block;
+      width: 30%;
+      height: auto;
+      border-radius: 5px;
+      transition: all 0.2s ;
+    }
+
+    button:hover {
+      margin-top: -2px;
+      margin-left: 0px;
+      transform: scale(1.01,1.01);
+      box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.25);
+    }
+  }
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100px;
+  padding: 20px;
+  background-color: rgba(244,244,244,1);
+
+
+  div {
+    width: 30%;
+    height: 100%;
+    text-align: center;
+
+    span {
+      font-size: 24px;
+      font-weight: 700;
+      color: #373737;
+    }
+
+    p {
+      font-size: 18px;
+      color: #3d3d3d;
+    }
+  }
 }
