updated exercises and users in seed data

--- a/app/assets/stylesheets/api/home_page.scss
+++ b/app/assets/stylesheets/api/home_page.scss
@@ -6,7 +6,7 @@
 
   .workout-splash {
     height: 100%;
-    background-image: url("/assets/workoutsplash.jpg");
+    background-image: url("http://www.bodybuilding.com/images/2016/january/7-ways-to-get-a-great-workout-in-a-packed-gym-graphics-2.jpg");
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
