--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -14,6 +14,7 @@ tr {
   background-color: white;
   border: 1px solid gray;
   text-align: left;
+  margin-bottom: 5px;
   &:nth-child(even) {
     background-color: lightgray;
   }
