--- a/app/assets/stylesheets/api/home_page.scss
+++ b/app/assets/stylesheets/api/home_page.scss
@@ -54,7 +54,7 @@
     button:hover {
       margin-top: -2px;
       margin-left: 0px;
-      transform: scale(1.01,1.01);
+      transform: scale3d(1.05, 1.05, 1.05);
       box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.25);
     }
   }
