--- a/app/assets/stylesheets/api/login_form.scss
+++ b/app/assets/stylesheets/api/login_form.scss
@@ -1,3 +1,21 @@
+$magenta: #C70062;
+$magenta1: #DD4992;
+$magenta2: #D8207A;
+$magenta3: #9F004E;
+$magenta4: #79003B;
+
+$gold: #F09A00;
+$gold1: #FFC255;
+$gold2: #FFB226;
+$gold3: #C07B00;
+$gold4: #925E00;
+
+$blue: #151FA6;
+$blue1: #553BC2;
+$blue2: #313BB9;
+$blue3: #0F1885;
+$blue4: #091065;
+
 h2 {
   margin: 0 !important;
 }
@@ -33,8 +51,8 @@ h2 {
   }
 
   li {
-    padding: 10px;
-    width: 50%;
+    padding: 10px 30px;
+    min-width: 200px;
     text-align: center;
     background: gray;
   }
@@ -44,8 +62,8 @@ h2 {
   }
 }
 
-.ReactModalPortal div div {
-  padding: 0 !important;
+.ReactModalPortal > div > div {
+  padding: 0px !important;
 }
 
 .credentials {
@@ -53,7 +71,13 @@ h2 {
   flex-direction: column;
   justify-content: center;
 
+  div {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .auth-btns {
+    margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -63,7 +87,7 @@ h2 {
       height: 40px;
       text-align: center;
       border: 0;
-      background: limegreen;
+      background: $magenta1;
       border-radius: 5px;
       transition: all 0.2s ;
       &:hover {
