--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -7,7 +7,7 @@
  section, img, div, h2, p, form,
  fieldset, label, input, textarea,
  span, article, footer, time, small {
-   font-family: 'Oxygen', sans-serif;
+   font-family: 'Noto Sans', sans-serif !important;
    margin: 0;
    padding: 0;
    border: 0;
