--- a/app/assets/stylesheets/api/gyms.scss
+++ b/app/assets/stylesheets/api/gyms.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the API::gyms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.gym-index-pane {
+  display:flex;
+  flex-direction: row;
+  width: 100%;
+
+
+
+ .half {
+   width: 500px;
+   height: 500px;
+ }
+
+}
+.gym-index {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  min-width: 300px;
+
+  .gym-each {
+    display: flex;
+    height: 100px;
+
+    .gym-logo {
+      width: 50px;
+      height: 50px;
+      
+    }
+
+    span {
+      font-size: 24px;
+    }
+  }
+}
