--- a/app/assets/stylesheets/api/gyms.scss
+++ b/app/assets/stylesheets/api/gyms.scss
@@ -1,38 +1,75 @@
 // Place all the styles related to the API::gyms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$magenta: #C70062;
+$magenta1: #DD4992;
+$magenta2: #D8207A;
+$magenta3: #9F004E;
+$magenta4: #79003B;
+
+$gold: #F09A00;
+$gold1: #FFC255;
+$gold2: #FFB226;
+$gold3: #C07B00;
+$gold4: #925E00;
+
+$blue: #151FA6;
+$blue1: #525BC2;
+$blue2: #313BB9;
+$blue3: #0F1885;
+$blue4: #091065;
+
 
 .gym-index-pane {
   display:flex;
   flex-direction: row;
   width: 100%;
-
-
-
  .half {
-   width: 500px;
+   min-width: 500px;
+   width: 50%;
    height: 500px;
  }
 
 }
+
 .gym-index {
   display: flex;
   flex-direction: column;
-  width: 70%;
-  min-width: 300px;
+  width: 50%;
+  min-width: 500px;
+  padding: 0 20px;
 
   .gym-each {
     display: flex;
-    height: 100px;
+    background-color: $gold1;
+    padding: 5px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    flex-direction: row;
+    height: 110px;
 
+    &:hover {
+      background-color: $gold2;
+      cursor: pointer;
+    }
     .gym-logo {
-      width: 50px;
-      height: 50px;
-      
+      width: 100px;
+      height: 100px;
     }
 
-    span {
-      font-size: 24px;
+    div {
+      position: relative;
+      left: 10px;
+      span {
+        font-size: 24px;
+        color: $blue;
+      }
+
+      p {
+        color: $blue1;
+      }
+
     }
+
   }
 }
