got joyride working, demo button disabled upon clicking

--- a/app/assets/stylesheets/api/login_form.scss
+++ b/app/assets/stylesheets/api/login_form.scss
@@ -108,6 +108,13 @@ h2 {
       background: $gold2;
     }
   }
+
+  .auth-btn.disabled {
+    cursor: not-allowed;
+    &:hover {
+      background: $gold1;
+    }
+  }
 }
 
 .user-info {
