first version of production readme

--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -126,7 +126,7 @@ table.workouts {
 }
 
 div > table > tbody > .my-workout {
-  background-color: $magenta2;
+  background-color: #F06400;
 
   &:hover {
     background-color: $magenta;
