--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -77,6 +77,7 @@ table.workouts {
   width: 90%;
   margin: 0 auto   ;
   border-spacing: 0 6px;
+  margin-top: 30px;
 }
 
 table.workouts td {
@@ -126,7 +127,7 @@ table.workouts {
 }
 
 div > table > tbody > .my-workout {
-  background-color: #F06400;
+  background-color: $magenta2;
 
   &:hover {
     background-color: $magenta;
@@ -136,5 +137,21 @@ div > table > tbody > .my-workout {
 
   td {
     color: white;
+  }
+}
+
+.selector {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+  button {
+    z-index: 0;
+    min-width: 150px;
+    &:first-child {
+      margin-right: 30%;
+    }
   }
 }
