--- a/app/assets/stylesheets/api/login_form.scss
+++ b/app/assets/stylesheets/api/login_form.scss
@@ -90,7 +90,7 @@ h2 {
 }
 
 .auth-btns {
-  margin: 0;
+  margin: 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -120,13 +120,12 @@ h2 {
 .user-info {
   display: flex;
   flex-direction: column;
-
+  height: 130px;
   label {
     input {
       width: 50%;
       border-radius: 5px;
       border: 1px solid gray;
-      margin-bottom: 10px;
       display: flex;
       flex-direction: row;
       padding: 6px;
