--- a/app/assets/stylesheets/api/home_page.scss
+++ b/app/assets/stylesheets/api/home_page.scss
@@ -64,7 +64,7 @@ $blue4: #091065;
   display: flex;
   justify-content: center;
   text-align: center;
-  position: absolute;
+  position: relative;
   button {
     border: 0;
     background: $gold2;
